--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -42,6 +42,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Profile</a>
                     </li>
+                    <li class="nav-item"></li>
+                    <a class="nav-link text-white" href="/changepass">Change Password</a>
+                </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/logout">Logout</a>
                     </li>
