--- a/Views/my_Blogs.ejs
+++ b/Views/my_Blogs.ejs
@@ -19,7 +19,9 @@
         <div class="text-start">
             <a href="/" class="d-flex text-decoration-none">
                 <i class="bi bi-house-door-fill fs-2"></i>
-                <span class="d-flex align-items-center"><h3 class="m-0 ">MY-Blog</h3></span>
+                <span class="d-flex align-items-center">
+                    <h3 class="m-0 ">MY-Blog</h3>
+                </span>
             </a>
         </div>
 
@@ -62,32 +64,35 @@
                         <div class="row">
                             <!-- Check if blogs exist -->
                             <% if (blogs.length> 0) { %>
-                            <!-- Each Blog Card -->
-                            <% blogs.forEach((data)=> { %>
-                            <div class="col-md-4 mb-4">
-                                <div class="card h-100 shadow-sm">
-                                    <img src="<%= data.path %>" class="card-img-top" alt="Blog Image">
-                                    <div class="card-body">
-                                        <h5 class="card-title">
-                                            <%= data.title %>
-                                        </h5>
-                                        <p class="card-text">
-                                            <%= data.content.substring(0, 100) %>...
-                                        </p>
-                                    </div>
-                                    <div class="card-footer d-flex justify-content-between align-items-center">
-                                        <small class="text-muted">Posted on: <%= new Date(data.createdAt).toLocaleString() %></small>
-                                        <div>
-                                            <a href="/edit/<%=data._id %>" class="btn btn-primary btn-sm">Edit</a>
-                                            <a href="/delete/<%=data._id %>" class="btn btn-danger btn-sm">Delete</a>
+                                <!-- Each Blog Card -->
+                                <% blogs.forEach((data)=> { %>
+                                    <div class="col-md-4 mb-4">
+                                        <div class="card  shadow-sm">
+                                            <img src="<%= data.path %>" class="card-img-top" alt="Blog Image">
+                                            <div class="card-body">
+                                                <h5 class="card-title">
+                                                    <%= data.title %>
+                                                </h5>
+                                                <p class="card-text">
+                                                    <%= data.content.substring(0, 100) %>...
+                                                </p>
+                                            </div>
+                                            <div class="card-footer d-flex justify-content-between align-items-center">
+                                                <small class="text-muted">Posted on: <%= new
+                                                        Date(data.createdAt).toLocaleString() %></small>
+                                                <div>
+                                                    <a href="/edit/<%=data._id %>"
+                                                        class="btn btn-primary btn-sm">Edit</a>
+                                                    <a href="/delete/<%=data._id %>"
+                                                        class="btn btn-danger btn-sm">Delete</a>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                            <% }) %>
+                                <% }) %>
                             <% } else { %>
-                            <p class="text-center">No blogs found. Start writing your first blog!</p>
-                            <% } %>
+                                <p class="text-center">No blogs found. Start writing your first blog!</p>
+                        <% } %>
                         </div>
                     </div>
                 </div>
