--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -19,6 +19,8 @@
 				</div>
 				<input type="submit" value="Login">
 				<p class="already-account">Don't have an account? <a href="/signup">Signup</a></p>
+				<p class="already-account">Forget Password? <a href="/forgrtPass">ForgetPassword</a></p>
+
 			</form>
 		</div>
 	</div>
