--- a/Views/css/all_blogs.css
+++ b/Views/css/all_blogs.css
@@ -76,3 +76,44 @@ h1 {
         margin-left: 0;
     }
 }
+
+
+/* comments */
+
+
+.comment-section {
+border-top: 1px solid #eaeaea;
+padding: 10px 0;
+}
+
+.comment-title {
+font-weight: bold;
+margin-bottom: 10px;
+}
+
+.comments-list {
+margin-bottom: 10px;
+}
+
+.comment-item {
+font-size: 14px;
+}
+
+.comment-form {
+align-items: center;
+}
+
+.comment-form .form-control {
+border-radius: 20px;
+border: 1px solid #ccc;
+padding: 10px;
+flex-grow: 1;
+}
+
+.comment-form .btn {
+border-radius: 20px;
+}
+.toggle-comments {
+display: inline-block;
+margin-bottom: 10px;
+}
