--- a/Views/allBlogs.ejs
+++ b/Views/allBlogs.ejs
@@ -104,7 +104,7 @@
                                         <form action="/comments/<%= blog._id %>" method="POST" class="mt-2">
                                             <div class="form-group">
                                                 <label for="comment<%= blog._id %>">Add a comment:</label>
-                                                <input name="text" id="comment<%= blog._id %>" class="form-control"
+                                                <input name="text"  class="form-control"
                                                     required>
                                             </div>
                                             <button type="submit" class="btn btn-primary btn-sm">Submit</button>
